# Quectel-MaiGeNa

./: CMakeLists.txt  COPYING  Readme.md
new-ui/: QtMyGroupBox.cpp  QtMyGroupBox.h  define.h
qvision/: BaseItem.cpp  BaseItem.h  ControlItem.cpp  ControlItem.h  ImageItem.cpp  ImageItem.h  QGraphicsViews.cpp  QGraphicsViews.h
static/: desktop.desktop  run.sh
test/: CMakeLists.txt  Test_InspectionRecordRepo.cpp
view/: BaseWindow.h  DrawView.cpp  DrawView.h  DrawView.ui  EditSolution.cpp  EditSolution.h  EditSolution.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyParamsView.cpp  MyParamsView.h  MyParamsView.ui  MySqlView (copy).ui  MySqlView.cpp  MySqlView.h  MySqlView.ui  WorkThread.cpp  WorkThread.h  appbar.h  appbar.ui  appcontext.h  basedialog.h  basewidget.h  basewidget.ui  dbmanager.h  globals.h  historyview.cpp  historyview.h  historyview.ui  imageviewer.cpp  imageviewer.h  imageviewer.ui  inspectionrecordrepo.h  loadingspinner.h  main.cpp  qdrawer.cpp  qdrawer.h  qdrawerview.h  ringbuffer.h  (+4 more)
zackTools/: MVSCamera.cpp  MVSCamera.h  commonZack.h
